hphp/test/slow/yield/throw/throw_already_closed.php.expectf
bool(false)

Fatal error: Uncaught exception 'Exception' with message 'Generator is already finished' in %s/throw_already_closed.php:11
Stack trace:
#0 %s/throw_already_closed.php(11): Generator->throw()
%a {main}
